# dblayer

./: CMakeLists.txt  INSTALL  Makefile.am  README  build.sh  config.h.in  configure.ac  macports.txt  test.db
.github/workflows/: cmake.yml
cmake/Modules/: FindLibMagic.cmake  FindPostgreSQL.cmake  FindSQLite3.cmake  FindXmlrpcC.cmake  cern.txt
dblayer/: CMakeLists.txt  Makefile.am  booleanfield.cpp  booleanfield.h  datefield.cpp  datefield.h  dbconnection.cpp  dbconnection.h  dbefactory.cpp  dbefactory.h  dbentity.cpp  dbentity.h  dbfield.cpp  dbfield.h  dblayer.cpp  dblayer.h  dbmgr.cpp  dbmgr.h  floatfield.cpp  floatfield.h  foreignkey.cpp  foreignkey.h  importedPackages.h  integerfield.cpp  integerfield.h  mysqlconnection.cpp  mysqlconnection.h  odbcconnection.cpp  odbcconnection.h  sqliteconnection.cpp  sqliteconnection.h  stringfield.cpp  stringfield.h  xmlrpcconnection.cpp  xmlrpcconnection.h
doc/: Doxyfile  Makefile.am  README
examples/: Makefile.am  ex1.cpp  test.db
schema/: CMakeLists.txt  Makefile.am  booleanfield.cpp  booleanfield.h  datefield.cpp  datefield.h  field.cpp  field.h  floatfield.cpp  floatfield.h  integerfield.cpp  integerfield.h  schema.cpp  schema.h  stringfield.cpp  stringfield.h
src/: CMakeLists.txt  Makefile.am  config.h.in  dbschema.cpp  dbschema.h  dbshell.cpp  dbshell.h  main_dblayer.cpp  main_dblayer_test.cpp  main_schema.cpp
src/apps/: CMakeLists.txt  dbshell.cpp  dbshell.h  main_dblayer.cpp  main_dblayer_test.cpp  main_schema.cpp
src/apps/qtdblayertest/: dbschema.cpp  dbschema.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/dblayer/: CMakeLists.txt  authschema.cpp  authschema.h  booleanfield.cpp  booleanfield.h  cmschema.cpp  cmschema.h  datefield.cpp  datefield.h  dbconnection.cpp  dbconnection.h  dbefactory.cpp  dbefactory.h  dbentity.cpp  dbentity.h  dbfield.cpp  dbfield.h  dblayer.cpp  dblayer.h  dbmgr.cpp  dbmgr.h  floatfield.cpp  floatfield.h  foreignkey.cpp  foreignkey.h  importedPackages.h  integerfield.cpp  integerfield.h  mysqlconnection.cpp  mysqlconnection.h  odbcconnection.cpp  odbcconnection.h  sqliteconnection.cpp  sqliteconnection.h  stringfield.cpp  stringfield.h  xmlrpcconnection.cpp  xmlrpcconnection.h
src/qdblayer/: CMakeLists.txt  qdblayer.cpp  qdblayer.h  qresultset.cpp  qresultset.h  qsqliteconnection.cpp  qsqliteconnection.h  qxmlrpcconnection.cpp  qxmlrpcconnection.h  qxmlrpcresultset.cpp  qxmlrpcresultset.h
src/qdblayer/qutexmlrpc/: CMakeLists.txt  xrbase64.cpp  xrbase64.h  xrclient.cpp  xrclient.h  xrfaultcodes.h  xrmethodcall.cpp  xrmethodcall.h  xrmethodresponse.cpp  xrmethodresponse.h  xrserver.cpp  xrserver.h  xrsyncclient.cpp  xrsyncclient.h  xrvariant.cpp  xrvariant.h
src/qdblayer/qutexmlrpc/client/: clientimpl.cpp  clientimpl.h  test.cpp
src/qdblayer/qutexmlrpc/validationserver/: test.cpp  validationserver.cpp  validationserver.h  validationserver.pro
src/schema/: CMakeLists.txt  booleanfield.cpp  booleanfield.h  classfactory.h  datefield.cpp  datefield.h  field.cpp  field.h  floatfield.cpp  floatfield.h  integerfield.cpp  integerfield.h  schema.cpp  schema.h  stringfield.cpp  stringfield.h
src/tests/: CMakeLists.txt  cm_test.cpp  connection_test.cpp  dbmgr_test.cpp  dbschema.cpp  dbschema.h  main_dblayer_test.cpp
windblayer/: windblayer.sln
windblayer/Debug/: winlib.exp  winlib.lib
windblayer/dblayer/: AssemblyInfo.cpp  ReadMe.txt  Stdafx.cpp  Stdafx.h  dblayer.vcproj
windblayer/dblayer/Debug/: BuildLog.htm
windblayer/testDblayer/: AssemblyInfo.cpp  stdafx.cpp  stdafx.h  testDblayer.vcproj
windblayer/testSchema/: ReadMe.txt  stdafx.h  testSchema.vcproj
windblayer/testSchema/Debug/: BuildLog.htm
windblayer/winlib/: AssemblyInfo.cpp  ReadMe.txt  Stdafx.cpp  winlib.vcproj
windblayer/winlib/Debug/: BuildLog.htm  winlib.pch
