CURRENT=1
REVISION=0
AGE=0

lib_LTLIBRARIES = libschema.la
libschema_ladir = $(includedir)/schema
libschema_la_LDFLAGS = -version-info $(CURRENT):$(REVISION):$(AGE)
libschema_la_SOURCES = booleanfield.cpp datefield.cpp field.cpp floatfield.cpp integerfield.cpp schema.cpp stringfield.cpp
libschema_la_HEADERS = booleanfield.h datefield.h field.h floatfield.h integerfield.h schema.h stringfield.h
